--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hitung Mundur Hari Natal - Theis Andatu</title>
+    <meta property="og:locale" content="id_ID" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Count Down Christmas" />
+    <meta property="og:description"  content="Hitung Mundur Hari Natal" />
+    <meta property="og:url" content="#" />
+    <meta property="og:site_name" content="Count Down Christmas" />
+    <meta property="og:image" content="demo.png" />
+    <link rel="icon" type="image/x-icon" href="demo.png" />
+
+    <title>Hitung Mundur Hari Natal</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
   </head>
