--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <span class="label">Detik</span>
       </div>
     </div>
-    <iframe width="1" height="1" wmode="transparent" src="https://www.youtube.com/embed/RLTOR8AZVn0?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1" height="1" wmode="transparent" src="https://www.youtube.com/embed/jLydK15sk1o?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <script src="script.js"></script>
   </body>
 </html>
