--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <body>
     <div class="countdown-container">
       <h1>Hitung Mundur Hari Natal</h1>
+      <br>
+      <h2>25 Desember 2022</h2>
       <div id="timer">
         <div id="days"></div>
         <div id="hours"></div>
